# flathold

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: flathold-architecture.mdc  flathold-quality-gates.mdc
docs/: README.md  architecture.md  contributing.md  data-model.md  workflows.md
docs/user_stories/: 01-add-bank-statement.md  02-viewable-ledger.md
pages/: 1_Upload_statements.py  2_View_data.py
scripts/: migrate_bank_table.py  vacuum_delta_tables.py
src/flathold/: __init__.py  __main__.py  agata_weekly_manual.py  app.py  bank_account_metrics.py  bank_delta.py  constants.py  dashboard.py  household_contribution.py  household_split_store.py  ledger_delta.py  ledger_view.py  manual_ledger.py  schemas.py  tag_definitions_seed.py  tag_definitions_store.py  tag_rule_metadata.py  tag_rules.py  uncategorised_sector.py  unknown_cash.py  upload_statements.py  view_ledger.py  view_manual_entries.py  view_tags.py
src/flathold/analytics/: __init__.py  dashboard_metrics.py  dashboard_views.py  enhanced_ledger.py
src/flathold/core/: __init__.py  ledger_columns.py  tag_group.py  tag_pattern.py  tag_rule_metadata.py
src/flathold/data/: __init__.py  paths.py  schemas.py  tag_definitions_seed.py
src/flathold/pages/: 1_Upload_statements.py  2_View_data.py  2_View_ledger.py
src/flathold/services/: __init__.py  bank_service.py  dashboard_service.py  household_service.py  ledger_service.py  manual_ledger_service.py  tag_definitions_service.py  tagging_service.py
src/flathold/tag_rules/: __init__.py  constants.py  core.py  rules.py  rules_counter_party.py  rules_entertainment.py  rules_food_groceries.py  rules_home_finance.py  rules_personal.py  tag_group.py
src/flathold/ui/: app.py  (+1 more)
tests/: test_bank_table_save.py  test_enhanced_ledger.py  test_tag_definitions_schema.py
(+19 files in other folders)
