[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flathold"]

[project]
name = "flathold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=0.21.0",
    "marimo>=0.20.4",
    "pandera[polars]>=0.29.0",
    "polars-hash>=0.5.6",
    "polars[rtcompat]>=1.38.1",
    "streamlit>=1.55.0",
    "streamlit-autorefresh>=0.0.1",
]

[project.scripts]
flathold = "flathold.__main__:main"
