[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flathold"]

[project]
name = "flathold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "deltalake>=0.21.0",
    "marimo>=0.20.4",
    "pandera[polars]>=0.29.0",
    "polars-hash>=0.5.6",
    "polars[rtcompat]>=1.38.1",
    "streamlit>=1.55.0",
    "streamlit-autorefresh>=0.0.1",
]

[project.scripts]
flathold = "flathold.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]


[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
